@@ -1,6 +1,7 @@
 python-django (1.3-1) UNRELEASED; urgency=low
 
   * New upstream release.
+    - Update 01_disable_url_verify_regression_tests.diff.
 
  -- Chris Lamb <lamby@debian.org>  Thu, 24 Mar 2011 11:33:23 +0000
 
